SERVER-31016 Be more explicit about some lambda return types

Apparently, XCode 5's clang can't see that the two return arms
have the same type. Provide explicit return types to work around.